<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="414dp"
        android:layout_height="528dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/logo_vertical" />


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_sign_up"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="364dp"
        android:autofillHints="Name"
        android:hint="Name"
        android:inputType="text"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <EditText
        android:id="@+id/user_ID"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="428dp"
        android:autofillHints="USC ID"
        android:hint="USC ID"
        android:inputType="number"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="enter email address"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:autofillHints="enter password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

</androidx.constraintlayout.widget.ConstraintLayout>