<resources>
    <string name="app_name">MyUSCRecApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_log_in">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
...
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="map">map</string>
    <string name="select_a_rec_center">Select a Rec Center</string>
    <string name="usc_id_123456780">USC ID: 123456780</string>
    <string name="tommy_trojan">Tommy Trojan</string>
    <string name="tommy">tommy</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="reservations">reservations</string>
    <string name="username">Username</string>
    <string name="previous_reservations">Previous Reservations</string>
...
