...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <ImageView
        android:id="@+id/map"
        android:layout_width="393dp"
        android:layout_height="355dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@id/btn_lyon_center_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_center_header"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map" />

    <ImageButton
        android:id="@+id/btn_lyon_center"
        android:layout_width="39dp"
        android:layout_height="47dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/lyonmarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
...
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.336"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/btn_village_center"
        android:layout_width="39dp"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/villagemarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/btn_aquatics"
        android:layout_width="39dp"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/aquamarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
...
